--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
     "bootstrap-vue": "^2.17.3",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
     "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "bootstrap": "^4.5.2",
     "mutationobserver-shim": "^0.3.7",
