--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "cypress": "^6.2.0",
+    "jspdf": "^2.2.0",
+    "jspdf-autotable": "^3.5.13",
     "vue": "^2.6.11"
   },
   "devDependencies": {
